--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -3,3 +3,5 @@ $buttonFont: 'Open Sans', sans-serif;
 $headerFont: 'Raleway', sans-serif;
 $fancyFont: 'Satisfy', cursive;
 $mainFont: 'Titillium Web', sans-serif;
+
+$transition: 0.3s;
