Footer kinda okay

--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -33,6 +33,7 @@ header {
         h2 {
             font-size: 3.6rem;
             font-family: $logoFont;
+            text-transform: capitalize;
         }
     }
 }
