--- a/styles/scss/_contact.scss
+++ b/styles/scss/_contact.scss
@@ -1,5 +1,6 @@
 .contact {
-    background: linear-gradient(rgba(108, 12, 75,0.75),rgba(37, 18, 68,0.75)), url(../assets/colin-maynard-CoB45gP32rc-unsplash.jpg);
+    background: linear-gradient(rgba(108, 12, 75,0.75),rgba(37, 18, 68,0.75)), url(../assets/beach-bottle-cold-daylight-292426.jpg);
+    background-size: cover;
     color: #ffffff;
     i {
         color: #03b197;
