Hover on social links in footer

--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -26,4 +26,10 @@ footer {
             }
         }
     }
+    a {
+        transition: $transition;
+    }
+    a:hover, a:focus {
+        color: #3bafa3;
+    }
 }
