Portfolio section grid styling

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -221,7 +221,7 @@ body {
   text-transform: uppercase;
   border: none;
   color: #ffffff;
-  min-width: 15rem;
+  min-width: 20rem;
 }
 
 .profilePhoto {
@@ -363,6 +363,49 @@ header nav h2 {
   background: #93499f;
   padding: 10px;
   border-radius: 4px;
+}
+
+.portfolio .grid {
+  display: grid;
+  grid-template-rows: 2fr 1fr 2fr;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  grid-auto-flow: column;
+  margin-top: 50px;
+}
+.portfolio .itemContainer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.portfolio .itemContainer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.portfolio .itemContainer:nth-of-type(4n+1), .portfolio .itemContainer:nth-of-type(4) {
+  grid-row: span 2;
+}
+.portfolio .itemContainer .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  padding: 20px;
+  text-align: center;
+  z-index: 10;
+  background: linear-gradient(rgba(37, 18, 68, 0.75), rgba(108, 12, 75, 0.75));
+  opacity: 0;
+  transition: 0.3s;
+}
+.portfolio .itemContainer .overlay:hover, .portfolio .itemContainer .overlay:focus-within {
+  opacity: 1;
 }
 
 .contact {
