--- a/styles/scss/_contact.scss
+++ b/styles/scss/_contact.scss
@@ -1,7 +1,13 @@
 .contact {
-    background: linear-gradient(rgba(108, 12, 75,0.75),rgba(37, 18, 68,0.75)), url(../assets/beach-bottle-cold-daylight-292426.jpg);
+    background: linear-gradient(rgba(108, 12, 75,0.75),rgba(37, 18, 68,0.75));
     background-size: cover;
     color: #ffffff;
+    position: relative;
+    .background {
+        background: url(../assets/beach-bottle-cold-daylight-292426.jpg);
+        background-size: cover;
+        background-attachment: fixed;
+    }
     i {
         color: #03b197;
         font-size: 3rem;
