--- a/styles/scss/_general.scss
+++ b/styles/scss/_general.scss
@@ -55,3 +55,12 @@ h2 {
 section {
     padding: 80px 0;
 }
+
+.background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -10;
+}
