--- a/styles/styles.css
+++ b/styles/styles.css
@@ -266,15 +266,28 @@ section {
   padding: 80px 0;
 }
 
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -10;
+}
+
 header {
   min-height: 100vh;
-  background: linear-gradient(rgba(37, 18, 68, 0.75), rgba(108, 12, 75, 0.75)), url(../assets/colin-maynard-CoB45gP32rc-unsplash.jpg);
-  background-size: cover;
+  background: linear-gradient(rgba(37, 18, 68, 0.75), rgba(108, 12, 75, 0.75));
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #ffffff;
+}
+header .background {
+  background: url(../assets/colin-maynard-CoB45gP32rc-unsplash.jpg);
+  background-size: cover;
+  background-attachment: fixed;
 }
 header nav {
   position: absolute;
@@ -409,9 +422,15 @@ header nav h2 {
 }
 
 .contact {
-  background: linear-gradient(rgba(108, 12, 75, 0.75), rgba(37, 18, 68, 0.75)), url(../assets/beach-bottle-cold-daylight-292426.jpg);
+  background: linear-gradient(rgba(108, 12, 75, 0.75), rgba(37, 18, 68, 0.75));
   background-size: cover;
   color: #ffffff;
+  position: relative;
+}
+.contact .background {
+  background: url(../assets/beach-bottle-cold-daylight-292426.jpg);
+  background-size: cover;
+  background-attachment: fixed;
 }
 .contact i {
   color: #03b197;
