Formspree added and also some text

--- a/styles/scss/_general.scss
+++ b/styles/scss/_general.scss
@@ -1,5 +1,6 @@
 // common styles
 .button {
+    display: inline-block;
     font-family: $buttonFont;
     font-weight: bold;
     font-size: 2rem;
