--- a/styles/styles.css
+++ b/styles/styles.css
@@ -210,6 +210,7 @@ body {
 }
 
 .button {
+  display: inline-block;
   font-family: "Open Sans", sans-serif;
   font-weight: bold;
   font-size: 2rem;
@@ -336,6 +337,9 @@ header nav h2 {
   font-family: "Satisfy", cursive;
   font-size: 4.3rem;
   text-transform: capitalize;
+}
+.headerContent > * {
+  margin: 10px 0;
 }
 
 .about {
