--- a/styles/scss/_contact.scss
+++ b/styles/scss/_contact.scss
@@ -32,10 +32,15 @@
         flex-shrink: 0;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: flex-start;
     }
     li {
         align-items: flex-start;
+        margin-bottom: 20px;
+        i {
+            width: 30px;
+            flex-shrink: 0;
+        }
         > div {
             flex-grow: 1;
         }
