--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -20,26 +20,55 @@ header {
         border-bottom: 1.5px solid rgba(255,255,255,.32);
         .wrapper {
             display: flex;
-            align-items: center;
             justify-content: space-between;
         }
         ul {
             display: flex;
-            align-items: center;
+            // align-items: center;
             text-transform: uppercase;
-            li {
-                margin: 0 20px;
-            }
-            li:last-of-type {
-                margin: 0;
-            }
+
         }
         h2 {
             font-size: 3.6rem;
             font-family: $logoFont;
             text-transform: capitalize;
+            margin: auto 0;
         }
     }
+}
+
+nav li {
+    margin: 0 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    &:last-of-type {
+        margin-right: 0;
+    }
+    a {
+        padding: 18px 0;
+        position: relative;
+        top: 0;
+        bottom: 0;
+        z-index: 10;
+        &::after {
+            content:"";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 5px;
+            z-index: 0;
+            background: #03b197;
+            transition: $transition;
+            transform: scaleX(0);
+        }
+        &:hover::after, &:focus::after {
+            transform: scaleX(1);
+        }
+    }
+    
 }
 
 .headerContent {
