--- a/styles/scss/_portfolio.scss
+++ b/styles/scss/_portfolio.scss
@@ -11,6 +11,7 @@
         position: relative;
         width: 100%;
         height: 100%;
+        display: flex;
         img {
             width: 100%;
             height: 100%;
@@ -20,17 +21,12 @@
             grid-row: span 2;
         }
         .overlay {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             color: #ffffff;
-            padding: 20px;
+            padding: 40px 20px;
             text-align: center;
             z-index: 10;
             background: linear-gradient(rgba(37, 18, 68,0.75),rgba(108, 12, 75,0.75));
@@ -39,6 +35,20 @@
             &:hover, &:focus-within {
                 opacity: 1;
             }
+            h3 {
+                margin-bottom: 10px;
+            }
+            .button {
+                margin-top: 10px;
+            }
+        }
+        .imgContainer {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: -10;
         }
     }
 }
