--- a/styles/styles.css
+++ b/styles/styles.css
@@ -426,6 +426,7 @@ nav li a:hover::after, nav li a:focus::after {
   position: relative;
   width: 100%;
   height: 100%;
+  display: flex;
 }
 .portfolio .itemContainer img {
   width: 100%;
@@ -436,17 +437,12 @@ nav li a:hover::after, nav li a:focus::after {
   grid-row: span 2;
 }
 .portfolio .itemContainer .overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: #ffffff;
-  padding: 20px;
+  padding: 40px 20px;
   text-align: center;
   z-index: 10;
   background: linear-gradient(rgba(37, 18, 68, 0.75), rgba(108, 12, 75, 0.75));
@@ -455,6 +451,20 @@ nav li a:hover::after, nav li a:focus::after {
 }
 .portfolio .itemContainer .overlay:hover, .portfolio .itemContainer .overlay:focus-within {
   opacity: 1;
+}
+.portfolio .itemContainer .overlay h3 {
+  margin-bottom: 10px;
+}
+.portfolio .itemContainer .overlay .button {
+  margin-top: 10px;
+}
+.portfolio .itemContainer .imgContainer {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -10;
 }
 
 .contact {
