A whole pile of responsiveness.

--- a/styles/scss/_contact.scss
+++ b/styles/scss/_contact.scss
@@ -7,6 +7,7 @@
         background: url(../assets/beach-bottle-cold-daylight-292426.jpg);
         background-size: cover;
         background-attachment: fixed;
+        background-position: center;
     }
     i {
         color: #03b197;
