--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -10,6 +10,7 @@ header {
         background: url(../assets/colin-maynard-CoB45gP32rc-unsplash.jpg);
         background-size: cover;
         background-attachment: fixed;
+        background-position: center;
     }
     nav {
         position: absolute;
