--- a/styles/styles.css
+++ b/styles/styles.css
@@ -295,6 +295,7 @@ header .background {
   background: url(../assets/colin-maynard-CoB45gP32rc-unsplash.jpg);
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
 }
 header nav {
   position: absolute;
@@ -477,6 +478,7 @@ nav li a:hover::after, nav li a:focus::after {
   background: url(../assets/beach-bottle-cold-daylight-292426.jpg);
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
 }
 .contact i {
   color: #03b197;
@@ -585,4 +587,111 @@ footer a {
 }
 footer a:hover, footer a:focus {
   color: #3bafa3;
+}
+
+@media (max-width: 750px) {
+  .wrapper {
+    width: 100%;
+    padding: 0 20px;
+  }
+
+  .portfolio .grid {
+    display: flex;
+    flex-direction: column;
+  }
+  .portfolio .itemContainer .overlay {
+    padding: 80px 20px;
+  }
+
+  .contact ul {
+    width: 100%;
+    flex-direction: row;
+  }
+  .contact .flexContainer {
+    flex-direction: column-reverse;
+  }
+  .contact button.button {
+    margin: 20px auto;
+    width: 100%;
+  }
+  .contact .contactInfo i {
+    margin: 20px 0;
+  }
+  .contact .contactInfo li {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
+}
+@media (max-width: 650px) {
+  header .headerContent h1 {
+    font-size: 4rem;
+  }
+  header nav .wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media (max-width: 500px) {
+  header nav {
+    position: static;
+    width: 100%;
+    text-align: center;
+  }
+
+  header {
+    flex-direction: column;
+  }
+
+  header nav ul {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  nav li {
+    width: 100%;
+    margin: 0;
+  }
+
+  .headerContent {
+    margin: auto;
+  }
+
+  .skills ul li i {
+    font-size: 5vw;
+  }
+
+  .contact ul {
+    flex-direction: column;
+  }
+
+  .contact form input {
+    width: 100%;
+    margin-top: 20px;
+  }
+  .contact form input:first-of-type {
+    margin-top: 0;
+    margin-right: 0;
+  }
+
+  footer .wrapper {
+    flex-direction: column;
+  }
+  footer .wrapper > * {
+    width: 100%;
+  }
+  footer .wrapper h2, footer .wrapper .socialLinks, footer .wrapper p {
+    text-align: center;
+  }
+}
+@media (max-width: 400px) {
+  header .headerContent h1 {
+    font-size: 3rem;
+  }
+  header .headerContent p {
+    font-size: 2.1rem;
+  }
+  header .headerContent h2 {
+    font-size: 2.7rem;
+  }
 }
