Implementing a bunch of updates

--- a/styles/scss/_about.scss
+++ b/styles/scss/_about.scss
@@ -3,12 +3,12 @@
     .socialLinks {
         margin-top: 60px;
         a {
-            font-size: 3rem;
-            color: #949494;
+            font-size: 4rem;
+            color: #555555;
             padding: 0 5px;
             transition: $transition;
             &:hover, &:focus {
-                color: #60c7ac;
+                color: #93499f;
             }
         }
     }
