--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -1,6 +1,6 @@
 footer {
     background: #290e38;
-    color: #6f5b8f;
+    color: #eeeeee;
     padding: 15px 0;
     .wrapper {
         display: flex;
