--- a/styles/scss/_about.scss
+++ b/styles/scss/_about.scss
@@ -20,6 +20,7 @@
     .profilePhoto {
         display: inline-block;
         width: 30%;
+        min-width: 200px;
         margin: 40px 0;
         flex-shrink: 0;
         img {
