--- a/styles/scss/_portfolio.scss
+++ b/styles/scss/_portfolio.scss
@@ -3,7 +3,7 @@
         display: grid;
         grid-template-rows: 2fr 1fr 2fr;
         grid-template-columns: 1fr 1fr;
-        grid-gap: 20px;
+        grid-gap: 40px;
         grid-auto-flow: column;
         margin-top: 50px;
     }
@@ -12,6 +12,7 @@
         width: 100%;
         height: 100%;
         display: flex;
+        border: 4px #02b197 solid;
         img {
             width: 100%;
             height: 100%;
