--- a/styles/scss/_skills.scss
+++ b/styles/scss/_skills.scss
@@ -1,22 +1,32 @@
 .skills {
     background: #F7F7F7;
     ul {
-        display: flex;
-        justify-content: space-between;
-        margin: 60px 0;
-        &:nth-of-type(2) {
-            margin-bottom: 0;
-        }
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+        grid-gap: 20px;
         li {
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            justify-content: flex-start;
             align-items: center;
-            i {
-                font-size: 5rem;
-                color: #F7F7F7;
+            text-align: center;
+            .iconBox {
                 background: #93499f;
                 padding: 10px;
                 border-radius: 4px;
+                width: 8rem;
+                height: 8rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+            i {
+                font-size: 5rem;
+                color: #F7F7F7;
+            }
+            p {
+                margin-top: 10px;
             }
         }
     }
