--- a/styles/scss/_portfolio.scss
+++ b/styles/scss/_portfolio.scss
@@ -21,6 +21,12 @@
         &:nth-of-type(4n+1), &:nth-of-type(4) {
             grid-row: span 2;
         }
+        &:hover, &:focus-within, &.selected {
+            .overlay {
+                opacity: 1;
+                z-index: 10;
+            }
+        }
         .overlay {
             display: flex;
             flex-direction: column;
@@ -29,13 +35,10 @@
             color: #ffffff;
             padding: 40px 20px;
             text-align: center;
-            z-index: 10;
+            z-index: -5;
             background: linear-gradient(rgba(37, 18, 68,0.75),rgba(108, 12, 75,0.75));
             opacity: 0;
             transition: $transition;
-            &:hover, &:focus-within {
-                opacity: 1;
-            }
             h3 {
                 margin-bottom: 10px;
             }
