--- a/styles/scss/_skills.scss
+++ b/styles/scss/_skills.scss
@@ -4,6 +4,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
         grid-gap: 20px;
+        margin-top: 50px;
         li {
             display: flex;
             flex-direction: column;
