--- a/styles/styles.css
+++ b/styles/styles.css
@@ -410,6 +410,7 @@ nav li a:hover::after, nav li a:focus::after {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
   grid-gap: 20px;
+  margin-top: 50px;
 }
 .skills ul li {
   display: flex;
