--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -14,11 +14,14 @@ footer {
             text-transform: capitalize;
             font-size: 3.6rem;
         }
-        p {
+        div.right {
             text-align: right;
             font-size: 2rem;
+            p {
+                margin: 0;
+            }
         }
-        div {
+        div.socialLinks {
             text-align: center;
             font-size: 3rem;
             i {
