--- a/styles/styles.css
+++ b/styles/styles.css
@@ -605,15 +605,18 @@ footer .wrapper h2 {
   text-transform: capitalize;
   font-size: 3.6rem;
 }
-footer .wrapper p {
+footer .wrapper div.right {
   text-align: right;
   font-size: 2rem;
 }
-footer .wrapper div {
+footer .wrapper div.right p {
+  margin: 0;
+}
+footer .wrapper div.socialLinks {
   text-align: center;
   font-size: 3rem;
 }
-footer .wrapper div i {
+footer .wrapper div.socialLinks i {
   margin: 0 5px;
 }
 footer a {
