2020 tweaks, and different menu change on small screens. Will build a hamburger later.

--- a/styles/scss/_media.scss
+++ b/styles/scss/_media.scss
@@ -72,7 +72,6 @@
 @media (max-width: 500px) {
 
     header nav {
-        position: static;
         width: 100%;
         text-align: center;
     }
@@ -82,8 +81,9 @@
     }
 
     header nav ul {
-        flex-direction: column;
-        width: 100%;
+        display: none;
+        // flex-direction: column;
+        // width: 100%;
     }
 
     nav li {
