--- a/styles/scss/_media.scss
+++ b/styles/scss/_media.scss
@@ -74,21 +74,55 @@
     header nav {
         width: 100%;
         text-align: center;
+        .hamburger {
+            display: block;
+            position: fixed;
+            top: 0;
+            right: 0;
+            z-index: 60;
+            button {
+                display: block;
+                min-width: 60px;
+                min-height: 60px;
+                background: none;
+                color: white;
+                text-shadow: 0 0 4px black;
+                border: none;
+                transition: $transition;
+                &.open {
+                    transform: rotateZ(90deg);
+                }
+                &:hover, &:focus {
+                    color: #02b197;
+                }
+            }
+        }
     }
 
     header {
         flex-direction: column;
     }
 
-    header nav ul {
-        display: none;
-        // flex-direction: column;
-        // width: 100%;
+    // Build hamburger menu here
+    .menu {
+        position: fixed;
+        z-index: 50;
+        transform: translateY(-50%) scaleY(0);
+        flex-direction: column;
+        width: 100%;
+        background: rgb(37, 18, 68);
+        border-bottom: 3px white solid;
+        transition: $transition;
+        // opened via class
+        &.open {
+            transform: translateY(0) scaleY(1);
+        }
     }
 
     nav li {
         width: 100%;
         margin: 0;
+        border-bottom: rgba(255,255,255,0.5) 0.5px solid;
     }
 
     .headerContent {
